tests/reference/asr-test_dict3-d28f38f.stderr
semantic error: Type mismatch in get's key value, the types must be compatible
 --> tests/errors/test_dict3.py:5:15
  |
5 |     x = y.get(1)
  |               ^ type mismatch (found: 'i32', expected: 'str')


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
